--- a/static/css/main.css
+++ b/static/css/main.css
@@ -194,7 +194,7 @@ h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
     border-bottom: solid 1px #ffffff;
     padding-bottom: 0.5rem;
     text-align: center;
-    margin-top: -50px;
+
 }
 
 .center_top {
@@ -665,7 +665,7 @@ input[type="radio"] + label:before {
 
 .image:before {
     pointer-events: none;
-    background-image: url("../images/overlay.png");
+    background-image: url("/static/images/overlay.png");
     background-color: rgba(24, 27, 31, 0.5);
     border-radius: 4px;
     content: '';
@@ -1159,7 +1159,7 @@ button {
     -webkit-transition-delay: 0.75s;
     -ms-transition-delay: 0.75s;
     transition-delay: 0.75s;
-    background-image: linear-gradient(to top, rgba(11, 28, 84, 0.5), rgba(11, 33, 84, 0.5)), url("../images/overlay.png");
+    background-image: linear-gradient(to top, rgba(11, 28, 84, 0.5), rgba(11, 33, 84, 0.5)), url("/static/images/overlay.png");
     background-size: auto,
     256px 256px;
     background-position: center,
@@ -1178,7 +1178,7 @@ button {
     -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
     -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
     transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-    background-image: url("../images/bg.jpg");
+    background-image: url("/static/images/bg.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1731,19 +1731,22 @@ body.is-preload #footer {
 }
 
 .form-back {
-    margin: 0 auto;
-    background-color: rgb(255, 255, 255);
+    display: none;
+    background-color: #dcdbdb;
     padding: 10px;
     border-radius: 10px;
     font-size: 16px;
     width: 60%;
     box-sizing: border-box;
     flex-direction: column;
+    position: relative;
+    margin: 0 auto;
+    bottom: -300px;
 
 }
 
 .form-text {
-    color: #050513;
+    color: #ffffff;
     font-size: 25px;
     font-family: "Source Sans Pro", sans-serif;
     text-align: center;
@@ -1758,16 +1761,30 @@ body.is-preload #footer {
     font-family: "Source Sans Pro", sans-serif;
 }
 
+.pr {
+    text-align: center;
+    color: #91a3f6;
+    font-size: large;
+
+}
+.pr_color {
+    color: #fcfcfc;
+
+}
+.pr_color2 {
+    color: #ff4d35;
+
+}
+
 
 .form-line:required {
-    margin-top: -15px;
-    margin-bottom: 20px;
+    margin-top: 10px;
     width: 100%;
     height: 30px;
-    border: 1px solid #0c0909;
+    border: 2px solid #0c0909;
     border-radius: 10px;
     color: #000000;
-    background-color: rgba(185, 185, 185, 0.85);
+    background-color: rgb(253, 253, 253);
 }
 
 .form-line:required:focus {
@@ -1778,26 +1795,29 @@ body.is-preload #footer {
     border-radius: 10px;
     font-size: 16px;
     color: #111111;
-    background-color: #d0cece;
+    background-color: rgb(255, 255, 255);
 }
 
 .form-line::placeholder {
     font-size: larger;
     font-family: "Source Sans Pro", sans-serif;
-    color: rgba(0, 0, 0, 0.5) !important;
+    color: #0e0e0e !important;
 }
 
 
 .form-back button {
-    background-color: #464646;
+    background-color: #c5c3c3 ;
     display: block;
     border-radius: 10px;
-    margin: 0 auto;
+    margin: 10px auto -2px;
+    color: black !important;
+    border: 2px solid #0c0909;
 }
 
 .form-back button:hover {
     background-color: #2f2f2f;
     border-radius: 10px;
+
 }
 
 .top_seven_h1 {
@@ -1805,12 +1825,13 @@ body.is-preload #footer {
 }
 .top_seven_1h {
     text-align: center;
-    color: #91a3f6;
+    color: #ea412c;
 }
 
 .top_seven {
-    color: #91a3f6;
+    color: #ff432e;
     font-size: large;
+    font-style: normal;
     list-style-type: none;
 
 }
@@ -1819,11 +1840,12 @@ body.is-preload #footer {
     list-style-type: none;
 }
 .span {
-    color: #91a3f6;
+    color: #ea412c;
     font-style: oblique;
 }
 .span2 {
-    color: #91a3f6;
+    color: #ea412c;
+    font-style: oblique;
 }
 .contact-info {
     font-size: large;
@@ -1845,3 +1867,12 @@ body.is-preload #footer {
     margin-bottom: 25px;
     text-align: match-parent;
    }
+
+.button_show {
+    color: #ea412c !important;
+   }
+
+.span3 {
+    color: #ea412c;
+    font-style: oblique;
+}
