--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1678,7 +1678,7 @@ body.is-preload #footer {
 
 .popup-content {
     background-color: #e5e5e5;
-    margin: 0 auto;
+    margin: 200px auto;
     padding: 20px;
     border: 1px solid #888;
     width: 50%;
@@ -1688,7 +1688,6 @@ body.is-preload #footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transform: translateY(140%);
     border-radius: 10px;
 }
 
@@ -1786,6 +1785,28 @@ body.is-preload #footer {
     color: #000000;
     background-color: rgb(253, 253, 253);
 }
+
+.form-line:optional {
+    margin-top: 10px;
+    width: 100%;
+    height: 30px;
+    border: 2px solid #0c0909;
+    border-radius: 10px;
+    color: #000000;
+    background-color: rgb(253, 253, 253);
+}
+
+.form-line:optional:focus {
+    width: 100%;
+    height: 30px;
+    padding: 10px;
+    border: 1px solid #070707;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #111111;
+    background-color: rgb(255, 255, 255);
+}
+
 
 .form-line:required:focus {
     width: 100%;
