--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1731,7 +1731,7 @@ body.is-preload #footer {
 
 .form-back {
     display: none;
-    background-color: #dcdbdb;
+    background-color: rgba(0, 0, 0, 0);
     padding: 10px;
     border-radius: 10px;
     font-size: 16px;
@@ -1766,10 +1766,13 @@ body.is-preload #footer {
     font-size: large;
 
 }
+
 .pr_color {
     color: #fcfcfc;
+    margin-right: 10px;
 
 }
+
 .pr_color2 {
     color: #ff4d35;
 
@@ -1777,31 +1780,31 @@ body.is-preload #footer {
 
 
 .form-line:required {
-    margin-top: 10px;
+    margin-top: -10px;
     width: 100%;
-    height: 30px;
-    border: 2px solid #0c0909;
-    border-radius: 10px;
+    height: 40px;
+    border-radius: 5px;
     color: #000000;
     background-color: rgb(253, 253, 253);
+    border-color: white;
 }
 
 .form-line:optional {
     margin-top: 10px;
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: 2px solid #0c0909;
-    border-radius: 10px;
+    border-radius: 5px;
     color: #000000;
     background-color: rgb(253, 253, 253);
 }
 
 .form-line:optional:focus {
     width: 100%;
-    height: 30px;
+    height: 40px;
     padding: 10px;
     border: 1px solid #070707;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 16px;
     color: #111111;
     background-color: rgb(255, 255, 255);
@@ -1810,10 +1813,10 @@ body.is-preload #footer {
 
 .form-line:required:focus {
     width: 100%;
-    height: 30px;
+    height: 40px;
     padding: 10px;
     border: 1px solid #070707;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 16px;
     color: #111111;
     background-color: rgb(255, 255, 255);
@@ -1827,23 +1830,25 @@ body.is-preload #footer {
 
 
 .form-back button {
-    background-color: #c5c3c3 ;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0);
     display: block;
-    border-radius: 10px;
     margin: 10px auto -2px;
-    color: black !important;
-    border: 2px solid #0c0909;
+    color: #f60606 !important;
+    border: 1px solid #ffffff;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 .form-back button:hover {
-    background-color: #2f2f2f;
-    border-radius: 10px;
+    background-color: #7c7c7c;
 
 }
 
 .top_seven_h1 {
     text-align: center;
 }
+
 .top_seven_1h {
     text-align: center;
     color: #ea412c;
@@ -1860,14 +1865,17 @@ body.is-preload #footer {
 .no-wrap {
     list-style-type: none;
 }
+
 .span {
     color: #ea412c;
     font-style: oblique;
 }
+
 .span2 {
     color: #ea412c;
     font-style: oblique;
 }
+
 .contact-info {
     font-size: large;
 }
@@ -1887,13 +1895,95 @@ body.is-preload #footer {
     column-rule: 1px solid #ccc;
     margin-bottom: 25px;
     text-align: match-parent;
-   }
+}
 
 .button_show {
     color: #ea412c !important;
-   }
+}
 
 .span3 {
     color: #ea412c;
     font-style: oblique;
+}
+
+.button {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    min-width: 100px;
+    min-height: 40px;
+    display: inline-flex;
+    font-size: 16px;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: rgba(0, 0, 0,0);
+    border: none;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+}
+
+.button::before {
+    content: '';
+    border-radius: 0;
+    min-width: calc(180px + 12px);
+    min-height: calc(35px + 12px);
+    box-shadow: 0 0 60px rgb(252, 2, 2);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
+
+.button:hover,
+.button:focus {
+    color: #313133;
+    transform: translateY(-6px);
+}
+
+.button:hover::before,
+.button:focus::before {
+    opacity: 1;
+}
+
+.button::after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    border: 6px solid #f50707;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+}
+
+.button:hover::after,
+.button:focus::after {
+    animation: none;
+    display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+    100% {
+        width: 225px;
+        height: 80px;
+        opacity: 0;
+    }
 }
